<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="com.example.customcellproject.ViewProjectActivity" >

    <TextView
        android:id="@+id/projName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="27dp"
        android:background="#ffffff"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/projOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/user_name"
            android:textSize="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/createdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/created"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#cc8400"
                android:textSize="12dp"
                 />

            <TextView
                android:id="@+id/createdDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creation_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#cc8400"
                android:textSize="12dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lastModifiedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/last_modified"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#cc8400"
                android:textSize="12dp"
               />

            <TextView
                android:id="@+id/lastModifiedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_modified_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#cc8400"
                android:textSize="12dp"
                 />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/decriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans" />

        <TextView
            android:id="@+id/projDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/decsription_details"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListViewStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
    </ExpandableListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageBtnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_up" />

        <ImageButton
            android:id="@+id/imageBtnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_down" />
    </LinearLayout>

</LinearLayout>